input field overlapping fix

--- a/styles/login.css
+++ b/styles/login.css
@@ -107,8 +107,7 @@ div {
 	opacity: 0.8;
 	border: none;
 	position: absolute;
-	left: 64%;
-	padding-left: 40px;
+	margin-left: 400px;
 	padding-top: 15px;
 }
 
@@ -236,4 +235,11 @@ input {
 	display: block;
 	width: 300px;
 	padding-top: 10px;
+}
+
+@media screen and (max-width: 460px) {
+	.show-password {
+		margin-left: 200px!important;
+		padding-top: 10px!important;
+	}
 }
